--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,30 @@
-*, *::after, *::before {
-  box-sizing: border-box;
-  
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+    box-sizing: border-box;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    font-size: clamp(13px, 0.5rem + 1vw, 18px);
+
+    body{
+        margin: 0;
+        padding: 0;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        
+        a{
+            text-decoration: none;
+            color: inherit;
+        }
+
+        h1, h2, h3, h4, h5 {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+    }
 }
