--- a/src/composants/Dossier.scss
+++ b/src/composants/Dossier.scss
@@ -12,3 +12,8 @@
         height: 100%;
     }
 }
+.Dossier:hover{
+    box-shadow: 0 0 15px 3px black;
+    transform: scale(1.05);
+    transition: all 0.5s;
+}
