--- a/src/composants/Dossier.scss
+++ b/src/composants/Dossier.scss
@@ -10,7 +10,37 @@
 
     .info{
         height: 100%;
+        position: relative;
+
+        .suppression{
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            margin: 0.5rem;
+            background-color: rgba(128, 128, 128, 0.561);
+        }
     }
+    .couverture{
+        position: relative;
+
+        .rotation{
+            position: absolute;
+            left: 0;
+            top: 0;
+            margin: 0.5rem;
+            background-color: rgba(128, 128, 128, 0.561);
+        }
+
+        .edit{
+            position: absolute;
+            right: 0;
+            top: 0;
+            margin: 0.5rem;
+            background-color: rgba(128, 128, 128, 0.561);
+        }
+    }
+
+    
 }
 .Dossier:hover{
     box-shadow: 0 0 15px 3px black;
