Ajouter option de ajouter et supprimer

--- a/src/composants/Dossier.scss
+++ b/src/composants/Dossier.scss
@@ -47,3 +47,15 @@
     transform: scale(1.05);
     transition: all 0.5s;
 }
+
+// .AnimationTourner{
+//     animation: animer 2s infinite;
+// }
+// @keyframes animer {
+//     from {
+//         transform: rotate3d(1, 1, 1,  45deg);
+//     }
+//     to {
+//         transform: rotate3d(0, 0, 0, 0deg)
+//     }
+// }
